added in the order history

--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -44,9 +44,20 @@
                   href="/editprofile/<%=currentUser._id%> "
                   role="button"
                   sty
-                  style="position: absolute; top: 7%; right: 28%;height: 40px;width: 100px;text-align:center;"
+                  style="position: absolute; top: 7%; right: 24.7%;height: 40px;width: 100px;text-align:center;"
                 >
                   Edit Profile </a
+                  
+                >
+                <a
+                  class="btn btn-outline-light mx-2"
+                  href="/orderhistory"
+                  role="button"
+                  sty
+                  style="position: absolute; top: 7%; right: 33.5%;height: 40px;width: 120px;text-align:center;"
+                >
+                  Order History </a
+                  
                 ><br />
                 <img
                   class="user"
