--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -47,7 +47,7 @@
                       <input type="number" id="itemQuantity" name="itemQuantity" min="1" max="100">
                     </span>
                   </div>
-                  <input type="submit" value="Checkout" class="btn btn-success" />
+                  <input type="submit" value="Add to cart" class="btn btn-success" />
                   <a href="/restaurantprofile/<%=restaurant._id%>" class="btn btn-danger">
                     Back
                   </a>
