--- a/project/views/partials/footer.ejs
+++ b/project/views/partials/footer.ejs
@@ -34,6 +34,12 @@
           <a style="color:grey">
             <span class="mr-3" style="font-size: 12px;">&#169 2020 rSed</span>
           </a>
+
+          <a href="/receipt" style="color:grey">
+            <span class="mr-3" style="font-size: 12px;">Receipt</span>
+          </a>
+
+
         </div>
       </div>
     </div>
