--- a/project/views/receipt.ejs
+++ b/project/views/receipt.ejs
@@ -44,7 +44,7 @@
                 <address>
                   <strong>Elf Cafe</strong>
                   <br />
-                  <%=receipts=.address.houseNum%> <%=restaurant.address.street%>,
+                  <%=restaurant[1].address.houseNum%> <%=restaurant.address%>,
                   <br />
                   Los Angeles, CA 90026
                   <br />
