--- a/project/views/orderhistory.ejs
+++ b/project/views/orderhistory.ejs
@@ -1,88 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Fancy Fonts, Icons, and Logos -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous"
+    />
+    <!-- Bootstrap Link -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <!-- Fancy Fonts, Icons, and Logos -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-  <!-- Bootstrap Link -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
+    <!-- CSS StyleSheet -->
+    <link rel="stylesheet" href="/public/css/style.css" />
 
-  <!-- CSS StyleSheet -->
-  <link rel="stylesheet" href="/public/css/style.css" />
+    <!-- Icon Title -->
+    <title>OmNom Food Delivery</title>
 
-  <!-- Icon Title -->
-  <title>OmNom Food Delivery</title>
+    <!-- rSed Title Icon -->
+    <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
+  </head>
 
-  <!-- rSed Title Icon -->
-  <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
-</head>
+  <!-- Body -->
 
-<!-- Body -->
-
-<body>
-  <%- include("./partials/header.ejs") %>
-  <header style="padding-top: 100px;">
-    <div class="dark-overlay">
-      <div class="home-inner container">
-        <div class="row" style="justify-content: center;">
-          <h1>
-            <b>
-              Previous Orders
-            </b>
-          </h1>
-        </div>
-        <div class="row" style="justify-content: center;">
-          <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <ul class="list-group">
-              <% if (orderHistory.orderHistory.length == 0) { %>
+  <body>
+    <%- include("./partials/header.ejs") %>
+    <header style="padding-top: 100px;">
+      <div class="dark-overlay">
+        <div class="home-inner container">
+          <div class="row" style="justify-content: center;">
+            <h1>
+              <b>
+                Previous Orders
+              </b>
+            </h1>
+          </div>
+          <div class="row" style="justify-content: center;">
+            <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+              <ul class="list-group">
+                <% if (orderHistory.orderHistory.length == 0) { %>
                 <h1 align="center" style="padding-top: 250px; color: #ff0000;">
                   <b>
                     There are no orders yet! GET ORDERING MAGGOT!!!
                   </b>
                 </h1>
-              <% } else { %>
-              <% orderHistory.orderHistory.forEach(function(order) { %>
-              <li class="list-group-item" style="background: darkred;">
-                <%=moment(order.date).format('MMMM Do YYYY, h:mm:ss a')%>
-                <a type="button" href="/receipt" class="float-right btn btn-sm" style="background-color: white;">
-                  View History
-                </a>
-              </li>
-              <% }) ; %>
-              <% } %>
-            </ul>
+                <% } else { %> <%
+                orderHistory.orderHistory.forEach(function(order) { %>
+                <li class="list-group-item" style="background: darkred;">
+                  <%=moment(order.date).format('MMMM Do YYYY, h:mm:ss a')%>
+                  <a
+                    type="button"
+                    href="/receipt"
+                    class="float-right btn btn-sm"
+                    style="background-color: white;"
+                  >
+                    View History
+                  </a>
+                </li>
+                <% }) ; %> <% } %>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="d-flex justify-content-center" style="padding-top: 10px;">
-          <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <h3>
-              <p style="float: right;">
-                <a type="button" href="/profile/<%=currentUser._id%>" class="btn" style="
+          <div class="d-flex justify-content-center" style="padding-top: 10px;">
+            <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+              <h3>
+                <p style="float: right;">
+                  <a
+                    type="button"
+                    href="/profile/<%=currentUser._id%>"
+                    class="btn"
+                    style="
                       background-color: darkblue;
                       color: white;
                       font-weight: bold;
-                    ">
-                  Back
-                </a>
-              </p>
-            </h3>
+                    "
+                  >
+                    Back
+                  </a>
+                </p>
+              </h3>
+            </div>
+          </div>
+          <div class="row" style="align-items: right;">
+            <div
+              class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3"
+              style="text-align: right; padding-bottom: 75px;"
+            ></div>
           </div>
         </div>
-        <div class="row" style="align-items: right;">
-          <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3"
-            style="text-align: right; padding-bottom: 75px;"></div>
-        </div>
       </div>
-    </div>
-  </header>
-  <section id="explore-section" class="text-muted py-5"></section>
-  <!-- FOOTER -->
-  <%- include("./partials/footer.ejs") %>
-</body>
-
+    </header>
+    <section id="explore-section" class="text-muted py-5"></section>
+    <!-- FOOTER -->
+    <%- include("./partials/footer.ejs") %>
+  </body>
 </html>
