--- a/project/views/receipt.ejs
+++ b/project/views/receipt.ejs
@@ -33,51 +33,43 @@
   <header style="padding-top: 100px;">
     <div class="row" style="justify-content: center;">
       <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-        <h1 class="h6">Date: <%=orderHistory.orderHistory[0].date%> </h1>
-        <h2 class="h6">Order Number: </h2>
+        <h1 class="h6">Date: <%=order.date%> </h1>
         <ul class="list-group">
           <table class="table table-hover">
             <thead>
               <tr>
                 <th>Item</th>
                 <th>#</th>
-                <th class="text-center">Price</th>
-                <th class="text-center">Total</th>
+                <th>Price</th>
               </tr>
             </thead>
           </table> 
                   
           <div class="row">
-            <div class="col" style="padding-right: 20px;">
-              <% for(var j = 0; j< orderHistory.orderHistory[0].orderItems.length; j++) {%>
-                <%=orderHistory.orderHistory[0].orderItems[j].name; %>
+            <div class="col" style="padding-right: 35px;">
+              <% order.orderItems.forEach(function(orderItems){ %>
+                <%=orderItems.name%>
                 <br>
                 <br>
-                <%};%>
+             <% }) %>
 
             </div>
             
             <div class="col">                           
-              1
-              <br>
-              <br>
-              1
-            </div>
-
-            
-
-            <div class="col">
-              <% for(var j = 0; j< orderHistory.orderHistory[0].orderItems.length; j++) {%>
-                <%=orderHistory.orderHistory[0].orderItems[j].price;%>
+              <% order.orderItems.forEach(function(orderItems){ %>
+                1
                 <br>
                 <br>
-                <%};%>
+                <% }) %>
             </div>
-            <div class="col">             
-              35
-              <br>
-              <br>
-              25
+
+            <div class="col">   
+              <% order.orderItems.forEach(function(orderItems){ %>
+                <%var total%>
+                <%=orderItems.price;%>
+                <br>
+                <br>
+              <%});%>
             </div>  
           </div>
         </ul>
@@ -85,7 +77,7 @@
       
     </div>
     <div style="padding-left: 60%; padding-bottom: 20px; color: rgb(182, 30, 30)">
-      <h5>Total Spent: <%=orderHistory.orderHistory[0].totalPrice%></h6>
+      <h5>Total Spent: <%=order.totalPrice%></h6>
     </div>
     <div style="padding-left: 45%; padding-bottom: 20px">
     <button class="btn btn-primary hidden-print" onclick="printButton()">      
