--- a/project/views/receipt.ejs
+++ b/project/views/receipt.ejs
@@ -42,7 +42,7 @@
   
     <div class="row" style="padding-top: 20px;">
       <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3" >
-        <h1 class="h6">Date: <%=order.date%></h1>     
+        <h1 class="h6">Date: <%=moment(order.date).format('MMMM Do YYYY, h:mm a')%></h1>     
         <h2 class="h6">Order Number:  <span id="random"></span> </h2>        
           <table class="table" style="width:75%;">
             <thead>
