finished REVIEWS MUTHASTRUCKERRS

--- a/project/views/newreview.ejs
+++ b/project/views/newreview.ejs
@@ -51,7 +51,7 @@
                 </div>
                 <div class="row">
                   <div class="col">
-                    <select id="rating">
+                    <select id="rating" name="rating">
                       <option value=""></option>
                       <option value="1">☆</option>
                       <option value="2">☆☆</option>
