--- a/project/views/restaurantprofile.ejs
+++ b/project/views/restaurantprofile.ejs
@@ -101,7 +101,7 @@
                 <% if (review.rating == null) { %>
                 NO RATING
                 <% } else { %>
-                <% for (var i = 0; i < review.rating % 5; i++) { %>
+                <% for (var i = 0; i < review.rating; i++) { %>
                 &nbsp☆
                 <% } %>
                 <% } %>
