--- a/project/views/editProfile.ejs
+++ b/project/views/editProfile.ejs
@@ -58,6 +58,12 @@
                                 <input type="text" name="image" class="form-control form-control-lg"
                                     placeholder="Image URL" />
                             </div>
+                            <a type="button" href="/editpreferences/add" class="btn" style="
+                                background-color: green;
+                                color: white;
+                                font-weight: bold;">
+                                Edit Preferences
+                            </a>
                             <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
                         </div>
                     </div>
