--- a/project/views/editpreferences.ejs
+++ b/project/views/editpreferences.ejs
@@ -72,9 +72,10 @@
           </div>
           <div class="d-flex justify-content-center" style="padding-top: 10px;">
             <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+              <form method="POST" action="/editpreferences/add">
               <h3>
                 <p style="float: left;">
-                  <select id="preference_select">
+                  <select id="addedCategory">
                     <option value=""></option>
                     <option value="italian">Italian</option>
                     <option value="asian">Asian</option>
@@ -87,8 +88,7 @@
 
                 <p style="float: right;">
                   <a
-                    type="button"
-                    href="#" 
+                    type="button" 
                     class="btn"
                     style="
                       background-color: lightgreen;
@@ -100,6 +100,7 @@
                   </a>
                 </p>
               </h3>
+            </form>
             </div>
           </div>
           <div class="row" style="align-items: right;">
