--- a/project/views/newreview.ejs
+++ b/project/views/newreview.ejs
@@ -2,23 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Fancy Fonts, Icons, and Logos -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-    <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
-    <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="/public/css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- Fancy Fonts, Icons, and Logos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+  <!-- Bootstrap Link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
+  <!-- CSS StyleSheet -->
+  <link rel="stylesheet" href="/public/css/style.css" />
 
-    <!-- Icon Title -->
-    <title>rSed Food Delivery</title>
+  <!-- Icon Title -->
+  <title>rSed Food Delivery</title>
 
-    <!-- rSed Title Icon -->
-    <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
+  <!-- rSed Title Icon -->
+  <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
 </head>
 
 <!-- Body -->
@@ -29,48 +29,39 @@
     <div class="shamelessly-copied-dark-overlay">
       <form method="POST" action="/restaurantprofile/<%=restaurant._id%>/review">
         <hr style="margin: 0; border: 0; height: 65pt; visibility: hidden;" />
-          <div class="container">
-            <div class="row">
-              <div style="width: 50%; margin: 0 auto;">
-                <h1 
-                  class="font-weight-bold"
-                  style="text-align: center; color: white;"
-                >
-                  Leave a review for <br>
-                  <%=restaurant.name%>!
-                </h1>
-                <div class="form-group">
-                  <input
-                    type="text"
-                    name="review[comment]"
-                    class="form-control form-control-lg"
-                    placeholder="Review (max 100 characters)!"
-                    maxlength="100"
-                    style="height:100px"
-                  />
+        <div class="container">
+          <div class="row">
+            <div style="width: 50%; margin: 0 auto;">
+              <h1 class="font-weight-bold" style="text-align: center; color: white;">
+                Leave a review for <br>
+                <%=restaurant.name%>!
+              </h1>
+              <div class="form-group">
+                <input type="text" name="review[comment]" class="form-control form-control-lg"
+                  placeholder="Review (max 100 characters)!" maxlength="100" style="height:100px" />
+              </div>
+              <div class="row">
+                <div class="col">
+                  <select id="rating" name="rating">
+                    <option value=""></option>
+                    <option value="1">☆</option>
+                    <option value="2">☆☆</option>
+                    <option value="3">☆☆☆</option>
+                    <option value="4">☆☆☆☆</option>
+                    <option value="5">☆☆☆☆☆</option>
+                  </select>
                 </div>
-                <div class="row">
-                  <div class="col">
-                    <select id="rating" name="rating">
-                      <option value=""></option>
-                      <option value="1">☆</option>
-                      <option value="2">☆☆</option>
-                      <option value="3">☆☆☆</option>
-                      <option value="4">☆☆☆☆</option>
-                      <option value="5">☆☆☆☆☆</option>
-                    </select>
-                  </div>
-                  <div class="col">
-                    <button class="btn btn-outline-light btn-block bg-dark">Submit</button>
-                  </div>
+                <div class="col">
+                  <button class="btn btn-outline-light btn-block bg-dark">Submit</button>
                 </div>
               </div>
             </div>
           </div>
-        </form>
-      </div>
-    </header>
-    <%- include("./partials/footer.ejs") %>
+        </div>
+      </form>
+    </div>
+  </header>
+  <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
