--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -95,11 +95,20 @@
                   Food Preferences
                 </h2>
 
+                <a type="button" href="/editpreferences" class="btn" style="
+                      background-color: green;
+                      color: white;
+                      font-weight: bold;">
+                  Edit Preferences
+                </a>
+
+                <!--
                 <div class="row">
                   <div class="column" style="padding-left: 18px;">
                     <p class="chips chips-close" data-initialized="true"></p>
                   </div>
                 </div>
+                -->
 
                 <!--<div
                   id="container"
